--- a/indeks.html
+++ b/indeks.html
@@ -91,9 +91,9 @@
           <section class="social section">
             <h2 class="section__title">Sosial Media</h2>
             <div class="social__container bd-grid">
-              <a href="https://web.instgram.com/bangger89-" target="_blank" class="social__link"> <i class="bx bxl-facebook social__icon"></i> gerson </a>
+              <a href="https://web.instgram.com/bangger89-" target="_blank" class="social__link"> <i class="bx bxl-instagram social__icon"></i> gerson </a>
 
-              <a href=" https://wa.me/+6282187588073" target="_blank" class="social__link"> <i class="bx bxl-whatsapp social__icon"></i>Whatsap Me </a>
+              <a href=" https://wa.me/+6285158119897" target="_blank" class="social__link"> <i class="bx bxl-whatsapp social__icon"></i>Whatsap Me </a>
             </div>
           </section>
 
