--- a/indeks.html
+++ b/indeks.html
@@ -91,7 +91,7 @@
           <section class="social section">
             <h2 class="section__title">Sosial Media</h2>
             <div class="social__container bd-grid">
-              <a href="https://www.instgram.com/bangger89" target="_blank" class="social__link"> <i class="bx bxl-instagram social__icon"></i> gerson </a>
+              <a href="https://www.instagram.com/bangger89" target="_blank" class="social__link"> <i class="bx bxl-instagram social__icon"></i> gerson89</a>
 
               <a href=" https://wa.me/+6285158119897" target="_blank" class="social__link"> <i class="bx bxl-whatsapp social__icon"></i>Whatsap Me </a>
             </div>
