--- a/indeks.html
+++ b/indeks.html
@@ -121,7 +121,7 @@
                     <div class="education__data bd-grid">
                         <h3 class="education__title">SDN</h3>
                         <span class="education__studies">SDN 1 Mamasa</h3>
-                        <span class="education__year"<2008>/span>
+                        <span class="education__year"<2008</span>\
                     </div>
                 </div>
 
@@ -147,7 +147,7 @@
                       <span class="education__studies">KIFRABANGSA</span>
                       <span class="education__year">2014</span>
                   </div>
-              </div>p
+              </div>
 
                 <div class="education__content">
                       <div class="education__time">
@@ -227,7 +227,7 @@
                         <span class="experience__line"></span>
                     </div>
                     <div class="experience__data bd-grid">
-                        <h3 class="experience__title">KerjaBhakto</h3>
+                        <h3 class="experience__title">KerjaBhakti</h3>
                         <span class="experience__company">From 2014 to 2021 </span>
                         <p class="exsperince__description">
              giat dan rajin dalam mengikuti kerjaBhakti, baik di lingkungan masyarakat,sekolah,😁                
