--- a/indeks.html
+++ b/indeks.html
@@ -121,7 +121,7 @@
                     <div class="education__data bd-grid">
                         <h3 class="education__title">SDN</h3>
                         <span class="education__studies">SDN 1 Mamasa</h3>
-                        <span class="education__year"<2008</span>\
+                        <span class="education__year"<lupa tahun berapa</span>
                     </div>
                 </div>
 
@@ -133,7 +133,7 @@
                     <div class="education__data bd-grid">
                         <h3 class="education__title">SMP</h3>
                         <span class="education__studies">SMPN 1 Mamasa</span>
-                        <span class="education__year">2011</span>
+                        <span class="education__year">lupa tahunnya</span>
                     </div>
                 </div>
 
@@ -145,7 +145,7 @@
                   <div class="education__data bd-grid">
                       <h3 class="education__title">SMK</h3>
                       <span class="education__studies">KIFRABANGSA</span>
-                      <span class="education__year">2014</span>
+                      <span class="education__year">lupa tahunnya</span>
                   </div>
               </div>
 
@@ -157,7 +157,7 @@
                       <div class="education__data bd-grid">
                           <h3 class="education__title">UNIVERSITY</h3>
                           <span class="education__studies">UIT</span>
-                          <span class="education__year">2021</span>
+                          <span class="education__year">tae bang</span>
                       </div>
                   </div>
               </div>
